# walrus-compute-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  devlog.md  resources.md  todo.md
notes/compute/Device/: notes.md
notes/compute/device/: notes.md
notes/engine_initialization/: 1_init_vulkan.md  4_init_swapchain.md  instantiating_vulkan_objects.md  notes_init.md  vkguide_instance_device_swap.md
notes/engine_initialization/notes_init/: 2_init_commands.md  3_init_sync_structures.md
notes/rendering/renderpasses/: vkguide_renderpass_imagelayouts_framebuffer.md
shaders/: triangle.vert  triangle_RGB.frag  triangle_red.vert
shaders/rabbit_shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
shaders/test_shaders/triangle/mesh/: triangle_mesh.vert
shaders/test_shaders/triangle/red/: triangle_red.frag
src/: CMakeLists.txt  main.cpp  pretty_io.cpp  pretty_io.hpp  vk_initializers.cpp  vk_initializers.h  vk_types.h
src/engine/: vk_engine.cpp  vk_engine.h
src/engine/commands/: command.hpp
src/engine/compute/commands/: command.cpp  command.hpp
src/engine/compute/commands/notes/: vkguide.md
src/engine/compute/device/: device.cpp  device.hpp
src/engine/compute/synchronize/: generics.cpp  generics.hpp
src/engine/compute/synchronize/fence/: fence.cpp  fence.hpp
src/engine/compute/synchronize/semaphore/: semaphore.cpp  semaphore.hpp
src/engine/compute/syncronize/notes/: notes.md
src/engine/device/: device.cpp  device.hpp
src/engine/rendering/mesh/: mesh.cpp  mesh.hpp
src/engine/rendering/pipelines/builder/: pipeline_builder.cpp  pipeline_builder.hpp
src/engine/rendering/pipelines/defaults/: pipeline_defaults.cpp  pipeline_defaults.hpp
src/engine/rendering/renderpasses/: render_pass.cpp  render_pass.hpp
src/engine/rendering/renderpasses/notes/: vkguide.md
src/engine/rendering/swapchain/: swapchain.cpp  swapchain.hpp
src/engine/rendering/window/: window.cpp  window.hpp
src/engine/rendering/window/events/: window_events.cpp  window_events.hpp
src/engine/rendering/window/events/keys/: keys.cpp  keys.hpp
src/engine/swapchain/: swapchain.cpp  swapchain.hpp
test/: makefile  test.cpp  test.env
